infra/k8s/comments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: elie91/microservices-blog-comments:latest

---

apiVersion: v1
kind: Service
metadata:
  name: comments-cluster-ip
spec:
  selector:
    app: comments
  type: ClusterIP
  ports:
  - port: 4001
    targetPort: 4001
    name: comments
    protocol: TCP
