infra/k8s/eventbus.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eventbus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eventbus
  template:
    metadata:
      labels:
        app: eventbus
    spec:
      containers:
      - name: eventbus
        image: elie91/microservices-blog-eventbus:latest

---

apiVersion: v1
kind: Service
metadata:
  name: eventbus-cluster-ip
spec:
  selector:
    app: eventbus
  type: ClusterIP
  ports:
  - port: 4005
    targetPort: 4005
    name: eventbus
    protocol: TCP
