infra/k8s/moderation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: elie91/microservices-blog-moderation:latest

---

apiVersion: v1
kind: Service
metadata:
  name: moderation-cluster-ip
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
  - port: 4003
    targetPort: 4003
    name: moderation
    protocol: TCP
