infra/k8s/query.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: elie91/microservices-blog-query:latest

---

apiVersion: v1
kind: Service
metadata:
  name: query-cluster-ip
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
  - port: 4002
    targetPort: 4002
    name: query
    protocol: TCP
