infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules: 
    - host: posts.com
      http: 
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service: 
                name: posts-cluster-ip
                port: 
                  number: 4000
